--- a/CASINO_Game_Slot/casino.html
+++ b/CASINO_Game_Slot/casino.html
@@ -13,11 +13,12 @@
             <div class="value" id="value1">💚</div> 
         </div>
         <div class="slot" id="slot2">
-            <div class="value id="value1"">💖</div>
+            <div class="value" id="value2">💖</div>
         </div>
         <div class="slot" id="slot3">
-            <div class="value" id="value1">💛</div>
+            <div class="value" id="value3">💛</div>
         </div>
     </div>
+    <input id="inpSpeed" type="number" min="0" max="10">
 </body>
 </html>
