--- a/CASINO_Game_Slot/casino.html
+++ b/CASINO_Game_Slot/casino.html
@@ -20,5 +20,6 @@
         </div>
     </div>
     <input id="inpSpeed" type="number" min="0" max="10">
+    <button id="spinbtn">SPIN</button>
 </body>
 </html>
