--- a/CASINO_Game_Slot/casino.html
+++ b/CASINO_Game_Slot/casino.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,11 @@
     <script async defer src="casino.js"></script>
     <link rel="stylesheet" href="casino.css">
 </head>
+
 <body>
     <div class="machine">
         <div class="slot" id="slot1">
-            <div class="value" id="value1">💚</div> 
+            <div class="value" id="value1">💚</div>
         </div>
         <div class="slot" id="slot2">
             <div class="value" id="value2">💖</div>
@@ -20,6 +22,9 @@
         </div>
     </div>
     <input id="inpSpeed" type="number" min="0" max="10">
+    <br>
     <button id="spinbtn">SPIN</button>
+    <button id="stopbtn">STOP</button>
 </body>
+
 </html>
