--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -9,24 +9,40 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+
+    <!--top-right font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yomogi&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
     <div class="div1">
         <nav class="nav-flex">
             <div class="name"> DIVYANSH NIGAM</div>
-            <div class="home"> Home | Services | Projects | About | Contact </div>
+            <div class="home"> Home Services Projects About Contact </div>
 
         </nav>
 
         <div><img class="image" src="do.jpg" /></div>
     </div>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem sunt delectus inventore possimus maiores, non labore aperiam cumque nisi quis quibusdam veritatis at consequuntur placeat odio recusandae deserunt beatae assumenda.
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem sunt delectus inventore possimus maiores, non labore aperiam cumque nisi quis quibusdam veritatis at consequuntur placeat odio recusandae deserunt beatae assumenda.
-    </p>
+
+    <div>
+        <img class="bug" src="waterfall-gif.gif" alt="this slowpoke moves" />
+        <div class="top-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consectetur nemo voluptate cumque, ex quidem rerum unde! Exercitationem ducimus vel alias, dicta sequi libero eligendi et maiores reprehenderit pariatur. Ex! Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Cupiditate vero beatae tempora in temporibus eum incidunt suscipit veritatis iste facilis! Ea quo maiores soluta ab commodi quae modi nobis iusto?
+        </div>
+    </div>
+    <div class="contact-section">
+        <h1 class="contact">Contact</h1>
+        <p class="socialmedia">
+            <span>LinkedIn</span>
+            <span>Github</span>
+            <span>Twitter</span>
+            <span>instagram</span>
+        </p>
+    </div>
 
 </body>
 
