--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -30,9 +30,16 @@
 
     <div>
         <img class="bug" src="waterfall-gif.gif" alt="this slowpoke moves" />
-        <div class="top-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consectetur nemo voluptate cumque, ex quidem rerum unde! Exercitationem ducimus vel alias, dicta sequi libero eligendi et maiores reprehenderit pariatur. Ex! Lorem ipsum dolor
-            sit amet consectetur adipisicing elit. Cupiditate vero beatae tempora in temporibus eum incidunt suscipit veritatis iste facilis! Ea quo maiores soluta ab commodi quae modi nobis iusto?
-        </div>
+        <div class="top-right">Our environment never fails to blow us away, from destructive tornado’s to ever so common grass, everything is always more complex than it seems. Even if you’re not the outdoors-y type, there’s no denying we need nature to sustain ourselves. Important
+            aspects aside, nature is also just darn cool! The intricacy of snowflakes is stunning, and with enough of them in the right conditions, you may even be surprised to find self-rolling snowballs! There’s just some stuff you can’t make up, and
+            other things that are almost impossible to imagine. So browse through as we take a look at the most interesting aspects of the environment!</div>
+    </div>
+
+    <div class="read">
+        <div class="itm" id="it1"><img class="image" src="do.jpg" /></div>
+        <div class="itm" id="it2"><img class="image" src="div.jpeg" /></div>
+        <div class="itm" id="it3"><img class="image" src="do.jpg" /></div>
+        <div class="itm" id="it4"><img class="image" src="do.jpg" /></div>
     </div>
     <div class="contact-section">
         <h1 class="contact">Contact</h1>
