--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -18,24 +18,26 @@
 </head>
 
 <body>
-    <div class="div1">
-        <nav class="nav-flex">
-            <div class="name"> DIVYANSH NIGAM</div>
-            <div class="home"> Home Services Projects About Contact </div>
+    <div class="container">
+        <div class="div1">
+            <nav class="nav-flex">
+                <div class="name"> DIVYANSH NIGAM</div>
+                <div class="home"> Home Services Projects About Contact </div>
 
-        </nav>
+            </nav>
 
-        <div><img class="image" src="do.jpg" /></div>
-    </div>
+            <div><img class="image" src="do.jpg" /></div>
+        </div>
 
-    <div>
-        <img class="bug" src="waterfall-gif.gif" alt="this slowpoke moves" />
-        <div class="top-right">
-            <p>
-                Our environment never fails to blow us away, from destructive tornado’s to ever so common grass, everything is always more complex than it seems. Even if you’re not the outdoors-y type, there’s no denying we need nature to sustain ourselves. Important
-                aspects aside, nature is also just darn cool! The intricacy of snowflakes is stunning, and with enough of them in the right conditions, you may even be surprised to find self-rolling snowballs! There’s just some stuff you can’t make up,
-                and other things that are almost impossible to imagine. So browse through as we take a look at the most interesting aspects of the environment!
-            </p>
+        <div class="div2">
+            <img class="bug" src="waterfall-gif.gif" alt="this slowpoke moves" />
+            <div class="top-right">
+                <p>
+                    Our environment never fails to blow us away, from destructive tornado’s to ever so common grass, everything is always more complex than it seems. Even if you’re not the outdoors-y type, there’s no denying we need nature to sustain ourselves. Important
+                    aspects aside, nature is also just darn cool! The intricacy of snowflakes is stunning, and with enough of them in the right conditions, you may even be surprised to find self-rolling snowballs! There’s just some stuff you can’t make
+                    up, and other things that are almost impossible to imagine. So browse through as we take a look at the most interesting aspects of the environment!
+                </p>
+            </div>
         </div>
     </div>
 
